--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "async-landing",
   "version": "1.0.0",
   "description": "async landing platzi course",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
